--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,9 @@
 name: release
 
 on:
-  workflow_dispatch:
-    inputs:
-      tag:
-        description: "Tag to release (e.g., v0.0.1)"
-        required: true
-        default: "v0.0.1"
+  push:
+    tags:
+      - "v*"
 
 permissions:
   contents: write
@@ -72,24 +69,12 @@ jobs:
 
       - name: Verify tag matches Cargo.toml
         run: |
-          TAG="${{ inputs.tag }}"
+          TAG="${{ github.ref_name }}"
           VERSION=$(grep -E '^version' Cargo.toml | head -n1 | sed -E 's/version *= *"([^"]+)"/\1/')
           if [ "v$VERSION" != "$TAG" ]; then
             echo "Tag $TAG does not match Cargo.toml version v$VERSION"
             exit 1
           fi
-
-      - name: Create tag if missing
-        run: |
-          TAG="${{ inputs.tag }}"
-          if git rev-parse "$TAG" >/dev/null 2>&1; then
-            echo "Tag $TAG already exists"
-            exit 0
-          fi
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git tag -a "$TAG" -m "$TAG"
-          git push origin "$TAG"
 
       - name: Download artifacts
         uses: actions/download-artifact@v4
@@ -103,7 +88,7 @@ jobs:
 
       - name: Generate release notes
         run: |
-          TAG="${{ inputs.tag }}"
+          TAG="${{ github.ref_name }}"
           PREV_TAG=$(git tag --sort=-v:refname | grep -v "^${TAG}$" | head -n1)
           if [ -n "$PREV_TAG" ]; then
             RANGE="$PREV_TAG..$TAG"
@@ -152,8 +137,8 @@ jobs:
       - name: Create release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ inputs.tag }}
-          name: ${{ inputs.tag }}
+          tag_name: ${{ github.ref_name }}
+          name: ${{ github.ref_name }}
           body_path: RELEASE_NOTES.md
           files: |
             dist/**/emby-proxy-cli-*
