ci(release): configure aarch64 cross-linker in build step

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,10 @@ jobs:
             ${{ runner.os }}-cargo-${{ matrix.target }}-
 
       - name: Build
+        env:
+          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: ${{ matrix.needs_aarch64_toolchain && 'aarch64-linux-gnu-gcc' || '' }}
+          CC_aarch64_unknown_linux_gnu: ${{ matrix.needs_aarch64_toolchain && 'aarch64-linux-gnu-gcc' || '' }}
+          AR_aarch64_unknown_linux_gnu: ${{ matrix.needs_aarch64_toolchain && 'aarch64-linux-gnu-ar' || '' }}
         run: cargo build --release --target ${{ matrix.target }}
 
       - name: Package
